--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -1954,9 +1954,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 187
         },
-        "outputId": "668b1cc7-b9a6-41c6-9174-0c52188818e5"
+        "outputId": "928afcb6-f8ae-4e04-d41f-1003021758ee"
       },
       "source": [
         "# Excercise 5 - Regularization\n",
@@ -1978,19 +1978,55 @@
         "#Fit the linear regression\n",
         "model_l2 = regression.fit(class_X, class_y)\n",
         "\n",
-        "#Part 1\n",
+        "# Part 1\n",
         "# Get a score for both the models. \n",
         "# Compare the results and see if one type of regularization works better than another.\n",
         "Lasso_score = model_L1.score(X_test, y_test)\n",
-        "print('Lasso Score:\\n', Lasso_score)\n"
+        "print('Lasso Score:\\n', Lasso_score)\n",
+        "Ridge_score = model_l2.score(X_test, y_test)\n",
+        "print('Ridge Score:\\n', Ridge_score)\n",
+        "\n",
+        "# Part 2\n",
+        "# Implement ElasticNet estimator\n",
+        "from sklearn.linear_model import ElasticNet\n",
+        "enet = ElasticNet(alpha=0.5, l1_ratio=0.7)\n",
+        "model_l3 = enet.fit(class_X, class_y)\n",
+        "enet_score = model_l3.score(X_test, y_test)\n",
+        "print('enet Score:\\n', enet_score)\n",
+        "\n",
+        "# Part3\n",
+        "# RidgeCV and LassoCV to explore the best regularization parameters for each estimator\n",
+        "from sklearn.linear_model import RidgeCV\n",
+        "ridgecv = RidgeCV(alphas=[1e-3, 1e-2, 1e-1, 1])\n",
+        "model_l4 = ridgecv.fit(class_X, class_y)\n",
+        "ridgecv_score = model_l4.score(class_X, class_y)\n",
+        "print('RidgeCV Score:\\n', ridgecv_score)\n",
+        "\n",
+        "from sklearn.linear_model import LassoCV\n",
+        "lassocv = LassoCV(cv=5, random_state=0)\n",
+        "model_l5 = lassocv.fit(class_X, class_y)\n",
+        "lassocv_score = model_l5.score(class_X, class_y)\n",
+        "print('LassoCV Score:\\n', lassocv_score)\n",
+        "\n",
+        "#part 4\n",
+        "# Which parameters can be set to help prevent overfitting in DecisionTreeClassifier\n",
+        "To avoid overfitting due to very deep tree with many modes, we can typically prune setting the minimum number of samples required at a leaf node or setting the maximum depth of the tree. "
       ],
-      "execution_count": 50,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Lasso Score:\n",
-            " 0.6627498851239081\n"
+            " 0.6627498851239081\n",
+            "Ridge Score:\n",
+            " 0.7635055926483603\n",
+            "enet Score:\n",
+            " 0.6806920272648573\n",
+            "RidgeCV Score:\n",
+            " 0.7699548108739226\n",
+            "LassoCV Score:\n",
+            " 0.6617948384330969\n"
           ],
           "name": "stdout"
         }
