--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "6qniekiBjsmH",
         "colab_type": "code",
-        "outputId": "4f857ac0-569e-4905-86bc-3a3408b5248c",
+        "outputId": "6c4cabe8-8346-42d5-be83-8ffe2dd8995b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -53,7 +53,7 @@
         "print(class_X.shape)\n",
         "print(class_y.shape)\n"
       ],
-      "execution_count": 47,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,7 +1051,7 @@
       "metadata": {
         "id": "gsv_ION1Zav2",
         "colab_type": "code",
-        "outputId": "71b98d9d-8d40-4de6-9088-1a25e988af0f",
+        "outputId": "3d6da7b3-1974-46bc-f2b1-a9f54e55596d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
@@ -1079,7 +1079,7 @@
         "print('Labels counts in y_test:', np.bincount(y_test))\n",
         "print('Percentage of class zeroes in y_test',np.round(np.bincount(y_test)[0]/len(y_test)*100))"
       ],
-      "execution_count": 48,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -2008,7 +2008,7 @@
         "lassocv_score = model_l5.score(class_X, class_y)\n",
         "print('LassoCV Score:\\n', lassocv_score)\n",
         "\n",
-        "#part 4\n",
+        "# Part 4\n",
         "# Which parameters can be set to help prevent overfitting in DecisionTreeClassifier\n",
         "To avoid overfitting due to very deep tree with many modes, we can typically prune setting the minimum number of samples required at a leaf node or setting the maximum depth of the tree. "
       ],
@@ -2031,6 +2031,112 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dRq6dVKlgKlp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 445
+        },
+        "outputId": "74f6e1e8-0d30-4f47-b7e6-6b95bdf01331"
+      },
+      "source": [
+        "# Excercise 6 - Optimizing parameters\n",
+        "# Implementation of RandomizedSearchCV - use this method to search over defined hyperparameters, like GridSearchCV, however a fixed number of parameters are sampled, as defined by n_iter parameter.\n",
+        "# import libraries - note we use scipy for generating a uniform distribution\n",
+        "from scipy.stats import uniform\n",
+        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "#create logistic regression\n",
+        "logistic = LogisticRegression()\n",
+        "# creare hyperparameters as a list, as in type regularization penalty\n",
+        "penalty = ['l1', 'l2']\n",
+        "# or as a distributor of values to sample from -'C' is the hyperparameter controlling the size of the regularisation penalty\n",
+        "C = uniform(loc=0, scale=4)\n",
+        "# we need to pass these parameters as a dictornary of {param_name: values}\n",
+        "hyperparameters = dict(C=C, penalty=penalty)\n",
+        "#instantiate our model\n",
+        "randomizedsearch = RandomizedSearchCV(logistic, hyperparameters, random_state=1, n_iter=100, cv=5, verbose=0, n_jobs=-1)\n",
+        "#fit the model\n",
+        "best_model = randomizedsearch.fit(class_X, class_y)\n",
+        "print(best_model)\n",
+        "\n",
+        "# Part 1\n",
+        "# find out what the best parameters were\n",
+        "# predict using the best estimator returned by the search\n",
+        "\n",
+        "# best_params = Parameter setting that gave the best results on the hold out data.\n",
+        "bestparam = best_model.best_params_\n",
+        "print('Best Parameters:\\n', bestparam)\n",
+        "# best_estimator = Estimator that was chosen by the search, i.e. estimator which gave highest score (or smallest loss if specified) on the left out data.\n",
+        "bestestimator = best_model.best_estimator_\n",
+        "print('best estimator:\\n', bestestimator)\n",
+        "# best_score = Mean cross-validated score of the best_estimator.\n",
+        "bestestimator_score = bestestimator.score(class_X, class_y)\n",
+        "print('Best Estimator Score:\\n', bestestimator_score)"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "RandomizedSearchCV(cv=5, error_score='raise-deprecating',\n",
+            "                   estimator=LogisticRegression(C=1.0, class_weight=None,\n",
+            "                                                dual=False, fit_intercept=True,\n",
+            "                                                intercept_scaling=1,\n",
+            "                                                l1_ratio=None, max_iter=100,\n",
+            "                                                multi_class='warn', n_jobs=None,\n",
+            "                                                penalty='l2', random_state=None,\n",
+            "                                                solver='warn', tol=0.0001,\n",
+            "                                                verbose=0, warm_start=False),\n",
+            "                   iid='warn', n_iter=100, n_jobs=-1,\n",
+            "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f0c9fff4908>,\n",
+            "                                        'penalty': ['l1', 'l2']},\n",
+            "                   pre_dispatch='2*n_jobs', random_state=1, refit=True,\n",
+            "                   return_train_score=False, scoring=None, verbose=0)\n",
+            "Best Parameters:\n",
+            " {'C': 1.828819231947953, 'penalty': 'l2'}\n",
+            "best estimator:\n",
+            " LogisticRegression(C=1.828819231947953, class_weight=None, dual=False,\n",
+            "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+            "                   max_iter=100, multi_class='warn', n_jobs=None, penalty='l2',\n",
+            "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+            "                   warm_start=False)\n",
+            "Best Estimator Score:\n",
+            " 0.961335676625659\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qt61pRt1unyP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Part 2: Implement RandomSearchCV on the Boston dataset\n",
+        "from sklearn.linear_model import Lars\n",
+        "# create model \n",
+        "\n",
+        "# creare hyperparameters as a list, as in type regularization penalty\n",
+        "penalty = ['l1', 'l2']\n",
+        "# or as a distributor of values to sample from -'C' is the hyperparameter controlling the size of the regularisation penalty\n",
+        "C = uniform(loc=0, scale=4)\n",
+        "# we need to pass these parameters as a dictornary of {param_name: values}\n",
+        "hyperparameters = dict(C=C, penalty=penalty)\n",
+        "#instantiate our model\n",
+        "randomizedsearch = RandomizedSearchCV(boston, hyperparameters, random_state=1, n_iter=100, cv=5, verbose=0, n_jobs=-1)\n",
+        "#fit the model\n",
+        "best_model = randomizedsearch.fit(boston_X, boston_y)\n",
+        "print(best_model)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
