--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -2037,16 +2037,19 @@
       "metadata": {
         "id": "dRq6dVKlgKlp",
         "colab_type": "code",
-        "outputId": "b95f0ddd-6745-4284-c4fe-be1abce35d44",
+        "outputId": "b33ae32a-be54-49d9-a529-a2fa8dea7fce",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 925
+          "height": 783
         }
       },
       "source": [
         "# Excercise 6 - Optimizing parameters\n",
         "# Implementation of RandomizedSearchCV - use this method to search over defined hyperparameters, like GridSearchCV, however a fixed number of parameters are sampled, as defined by n_iter parameter.\n",
         "# import libraries - note we use scipy for generating a uniform distribution\n",
+        "# hide all warnings\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
         "from scipy.stats import uniform\n",
         "from sklearn.model_selection import RandomizedSearchCV\n",
         "#create logistic regression\n",
@@ -2081,7 +2084,7 @@
         "bestestimator_score = bestestimator.score(class_X, class_y)\n",
         "print('Best Estimator Score:\\n', bestestimator_score)"
       ],
-      "execution_count": 35,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -2103,7 +2106,7 @@
             " 'tol': 0.0001,\n",
             " 'verbose': 0,\n",
             " 'warm_start': False}\n",
-            "{'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f72e7bd29b0>, 'penalty': ['l1', 'l2']}\n",
+            "{'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f72e7929588>, 'penalty': ['l1', 'l2']}\n",
             "RandomizedSearchCV(cv=5, error_score=nan,\n",
             "                   estimator=LogisticRegression(C=1.0, class_weight=None,\n",
             "                                                dual=False, fit_intercept=True,\n",
@@ -2114,7 +2117,7 @@
             "                                                solver='lbfgs', tol=0.0001,\n",
             "                                                verbose=0, warm_start=False),\n",
             "                   iid='deprecated', n_iter=200, n_jobs=-1,\n",
-            "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f72e7bd29b0>,\n",
+            "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f72e7929588>,\n",
             "                                        'penalty': ['l1', 'l2']},\n",
             "                   pre_dispatch='2*n_jobs', random_state=1, refit=True,\n",
             "                   return_train_score=False, scoring=None, verbose=0)\n",
@@ -2130,20 +2133,6 @@
             " 0.9560632688927944\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:939: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html.\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
@@ -2154,13 +2143,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 445
+          "height": 390
         },
-        "outputId": "d515ddce-9809-438c-e973-0492865f22cd"
+        "outputId": "853e6871-8092-410f-e1e0-eb0c9b9c227a"
       },
       "source": [
         "# Part 2: Implement RandomSearchCV on the Boston dataset\n",
-        "\n",
+        "# hide all warnings\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
         "from sklearn.linear_model import Lasso\n",
         "from scipy.stats import uniform # used to generate parameters\n",
         "from sklearn.model_selection import RandomizedSearchCV\n",
@@ -2179,15 +2170,15 @@
         "# fit the model to the data\n",
         "best_model_boston = randomizedsearch.fit(boston_X, boston_y)\n",
         "bestparam_boston = best_model_boston.best_params_\n",
-        "print('Best Parameters:\\n', bestparam_boston)\n",
+        "print('Boston Best Parameters:\\n', bestparam_boston)\n",
         "# best_estimator = Estimator that was chosen by the search, i.e. estimator which gave highest score (or smallest loss if specified) on the left out data.\n",
         "bestestimator_boston = best_model_boston.best_estimator_\n",
-        "print('best estimator:\\n', bestestimator_boston)\n",
+        "print('Boston best estimator:\\n', bestestimator_boston)\n",
         "# best_score = Mean cross-validated score of the best_estimator.\n",
         "bestestimator_score = bestestimator_boston.score(boston_X, boston_y)\n",
-        "print('Best Estimator Score:\\n', bestestimator_score)"
+        "print('Boston Best Estimator Score:\\n', bestestimator_score)"
       ],
-      "execution_count": 51,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -2205,24 +2196,16 @@
             " 'selection': 'cyclic',\n",
             " 'tol': 0.0001,\n",
             " 'warm_start': False}\n",
-            "Best Parameters:\n",
+            "Boston Best Parameters:\n",
             " {'fit_intercept': True, 'alpha': 1}\n",
-            "best estimator:\n",
+            "Boston best estimator:\n",
             " Lasso(alpha=1, copy_X=True, fit_intercept=True, max_iter=1000, normalize=False,\n",
             "      positive=False, precompute=False, random_state=None, selection='cyclic',\n",
             "      tol=0.0001, warm_start=False)\n",
-            "Best Estimator Score:\n",
+            "Boston Best Estimator Score:\n",
             " 0.6825842212709925\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_search.py:281: UserWarning: The total space of parameters 12 is smaller than n_iter=100. Running 12 iterations. For exhaustive searches, use GridSearchCV.\n",
-            "  % (grid_size, self.n_iter, grid_size), UserWarning)\n"
-          ],
-          "name": "stderr"
         }
       ]
     }
