--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -2208,6 +2208,63 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J23ludoFYP8w",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "2048f257-245c-4fd1-9689-bea8e4126be4"
+      },
+      "source": [
+        "# Excercise 7- Ensemble models\n",
+        "# They combine different classifiers into a meta-classifier that has better generalization performance than each individual classifier alone\n",
+        "# Several different approaches to achieve this, including majority voting ensemble methods, which we select the class label that has been predicted by the majority of classifiers.\n",
+        "# The ensemble can be built from different classification algorithms, such as decision trees, support vector machines, logistic regression classifiers, and so on. Alternatively, we can also use the same base classification algorithm, fitting different subsets of the training set.\n",
+        "# Indeed, Majority voting will work best if the classifiers used are different from each other and/or trained on different datasets (or subsets of the same data) in order for their errors to be uncorrelated.\n",
+        "\n",
+        "#import classifiers\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.ensemble import VotingClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# create models\n",
+        "log_clf = LogisticRegression()\n",
+        "rnd_clf = RandomForestClassifier()\n",
+        "svm_clf = SVC()\n",
+        "\n",
+        "# An ensemble of them\n",
+        "# here we select hard voting, which returns the majority of the predictions, not an average of probabilities\n",
+        "voting_clf = VotingClassifier(estimators=[('lr', log_clf), ('rf', rnd_clf), ('svm', svm_clf)], voting='hard')\n",
+        "\n",
+        "# we can cycle throgh individual estimators\n",
+        "for clf in (log_clf, rnd_clf, svm_clf, voting_clf):\n",
+        "\n",
+        "#fit the training set\n",
+        "  clf.fit(X_train, y_train)\n",
+        "\n",
+        "#predict\n",
+        "  y_pred = clf.predict(X_test)\n",
+        "  print(clf.__class__.__name__, accuracy_score(y_test, y_pred))\n"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "LogisticRegression 0.9052631578947369\n",
+            "RandomForestClassifier 0.9368421052631579\n",
+            "SVC 0.9087719298245615\n",
+            "VotingClassifier 0.9368421052631579\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
