--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -712,7 +712,7 @@
       "metadata": {
         "id": "PEYTC20SZPEI",
         "colab_type": "code",
-        "outputId": "4be919ec-3688-4ae9-b8b0-3bb875512c81",
+        "outputId": "681cdf8e-e553-432e-b6e0-4528332b5c11",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 774
@@ -764,7 +764,7 @@
         "mean_std_transformed = pd.DataFrame(data={'mean':standardized1.mean(), 'std':standardized1.std()}, index=Class1_X.columns) #have another look at the transformed data\n",
         "mean_std_transformed[0:10] # call the dataframe"
       ],
-      "execution_count": 91,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -894,7 +894,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 91
+          "execution_count": 76
         }
       ]
     },
@@ -1532,7 +1532,7 @@
       "metadata": {
         "id": "B7YuQ4393d_4",
         "colab_type": "code",
-        "outputId": "a7880c66-d565-4af4-bab2-2775529767e8",
+        "outputId": "6b779426-d564-4f39-8f4c-fc572c607567",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 887
@@ -1557,7 +1557,7 @@
         "print(\"\\n\")\n",
         "print(boston_score)"
       ],
-      "execution_count": 95,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -2040,7 +2040,7 @@
         "outputId": "b33ae32a-be54-49d9-a529-a2fa8dea7fce",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 783
+          "height": 763
         }
       },
       "source": [
@@ -2261,6 +2261,120 @@
             "RandomForestClassifier 0.9368421052631579\n",
             "SVC 0.9087719298245615\n",
             "VotingClassifier 0.9368421052631579\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4_QIdPxZeKGk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 443
+        },
+        "outputId": "8c75a4e6-682c-4096-d6b2-de38dcc3441f"
+      },
+      "source": [
+        "# Part 1 -Implement Soft voting\n",
+        "# If all the classifiers used in the ensemble are able to estimate class probabilities (they have a predict_proba() method that can be called on the estimator), then you can tell Scikit-Learn to predict the class with the highest class probability, averaged over all the individual classifiers. It often achieves higher performance than hard voting because it gives more weight to highly confident votes.\n",
+        "# Replace voting=\"hard\" with voting=\"soft\" and ensure that all your classifiers can estimate class probabilities.\n",
+        "# If you use the SVC estimator, you need to set probability = True, which will make the SVC class use cross-validation to estimate class probabilities and add a predict_proba() method.\n",
+        "#import classifiers\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.ensemble import VotingClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "# create models\n",
+        "log_clf = LogisticRegression()\n",
+        "rnd_clf = RandomForestClassifier()\n",
+        "svm_clf = SVC(probability=True)\n",
+        "\n",
+        "# An ensemble of them\n",
+        "# here we select hard voting, which returns the majority of the predictions, not an average of probabilities\n",
+        "voting_clf = VotingClassifier(estimators=[('lr', log_clf), ('rf', rnd_clf), ('svm', svm_clf)], voting='soft')\n",
+        "\n",
+        "# we can cycle throgh individual estimators\n",
+        "for clf in (log_clf, rnd_clf, svm_clf, voting_clf):\n",
+        "\n",
+        "#fit the training set\n",
+        "  clf.fit(X_train, y_train)\n",
+        "\n",
+        "#predict\n",
+        "  y_pred_probabilties = clf.predict_proba(X_test)\n",
+        "  print(y_pred_probabilties[0:5])\n",
+        "  y_pred = clf.predict(X_test)\n",
+        "  print(clf.__class__.__name__, accuracy_score(y_test, y_pred))\n",
+        "  "
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1.60704334e-01 8.39295666e-01]\n",
+            " [8.40100069e-01 1.59899931e-01]\n",
+            " [7.34791933e-05 9.99926521e-01]\n",
+            " [9.99874299e-01 1.25700905e-04]\n",
+            " [5.47220664e-01 4.52779336e-01]]\n",
+            "LogisticRegression 0.9052631578947369\n",
+            "[[0.7  0.3 ]\n",
+            " [0.81 0.19]\n",
+            " [0.   1.  ]\n",
+            " [0.91 0.09]\n",
+            " [0.44 0.56]]\n",
+            "RandomForestClassifier 0.9298245614035088\n",
+            "[[0.38361096 0.61638904]\n",
+            " [0.24323745 0.75676255]\n",
+            " [0.03786358 0.96213642]\n",
+            " [0.99795211 0.00204789]\n",
+            " [0.76310475 0.23689525]]\n",
+            "SVC 0.9087719298245615\n",
+            "[[0.39904228 0.60095772]\n",
+            " [0.60306507 0.39693493]\n",
+            " [0.01227575 0.98772425]\n",
+            " [0.95942628 0.04057372]\n",
+            " [0.58931809 0.41068191]]\n",
+            "VotingClassifier 0.9368421052631579\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FJDKGlfsogkn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "1c5faf81-efc1-4197-e2e1-7cc50e5d7d98"
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.ensemble import VotingRegressor\n",
+        "from sklearn.svm import SVR\n",
+        "reg1 = SVR(C=1.0, epsilon=0.2)\n",
+        "reg2 = RandomForestRegressor(random_state=1, n_estimators=10)\n",
+        "reg3 = LinearRegression()\n",
+        "ereg = VotingRegressor(estimators=[('SV', reg1), ('rf', reg2), ('lr', reg3)])\n",
+        "ereg = ereg.fit(boston_X_train, boston_y_train)\n",
+        "y_pred = ereg.predict(boston_X_test)\n",
+        "boston_score = ereg.score(boston_X_test, boston_y_test)\n",
+        "print('Boston Score:\\n', boston_score)"
+      ],
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Boston Score:\n",
+            " 0.7056886248786793\n"
           ],
           "name": "stdout"
         }
