--- a/Pushpanjali_Banik_Scikit_learn.ipynb
+++ b/Pushpanjali_Banik_Scikit_learn.ipynb
@@ -2379,6 +2379,20 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ns_Gxn-GsvdV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Excercise 8 - Building Pipelines\n",
+        "# Build a pipeline so that many of the steps we have covered to now can be implemented in one step, and be applied to the training and testing set without repeating code.\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
