--- a/ET_ML.ipynb
+++ b/ET_ML.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ET-ML.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSnJUhDQknyGxG+oE7ZMcv",
+      "authorship_tag": "ABX9TyOU3QKloVIs+EyryyOIjd2r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,22 @@
         "from sklearn.metrics import mean_absolute_error\n",
         "from sklearn.metrics import r2_score\n",
         "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "\n",
+        "import io\n",
+        "df = pd.read_excel(io.BytesIO(uploaded['HFT_data.xlsx']))\n",
+        "# Dataset is now stored in a Pandas Dataframe\n",
+        "#print the head\n",
+        "df.head()\n",
+        "\n",
+        "#setting index as date\n",
+        "df['Date'] = pd.to_datetime(df.Date,format='%Y-%m-%d')\n",
+        "df.index = df['Date']\n",
+        "#plot\n",
+        "plt.figure(figsize=(16,8))\n",
+        "plt.plot(df['Close'], label='Close Price history')\n",
         "\n",
         "\n",
         "### split csv ###\n",
