--- a/ET_ML.ipynb
+++ b/ET_ML.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ET-ML.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOU3QKloVIs+EyryyOIjd2r",
+      "authorship_tag": "ABX9TyNx5+58QiKlh13gvEDf/ebW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
         "#### Select column ####\n",
         "\n",
         "import csv\n",
-        "# extracts 5 columns (date, ask, bid, ask volume, bid volume) from split data\n",
+        "# extracts 5 columns (close price, open price, trade volume, ask volume, bid volume) from split data\n",
         "file and writes it down in a new file\n",
         "def select_column(path_in, path_out, files_list, columns):\n",
         "for i in range(0,len(files_list)):\n",
