--- a/Event_tracker_1.ipynb
+++ b/Event_tracker_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Event_tracker_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyODy7d/bVQNyHSB68Sc9k0O",
+      "authorship_tag": "ABX9TyOYeJJS1xnjX93yehcQ6CD9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -314,11 +314,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cPTcf13PKfdZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "The profit or loss calculation is usually determined by the closing price of a stock for the day, hence we will consider the closing price as the target variable. Let’s plot the target variable to understand how it’s shaping up in our data:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "SxpwxlypFXPa",
+        "id": "LvIGctcFFf1L",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 534
+        },
+        "outputId": "1181a8f6-40ad-4c75-a6e8-3de274ae411a"
       },
       "source": [
         "#to plot within notebook\n",
@@ -331,44 +345,28 @@
         "\n",
         "#for normalizing data\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
-        "scaler = MinMaxScaler(feature_range=(0, 1))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LvIGctcFFf1L",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 500
-        },
-        "outputId": "e371f4c6-1344-47f7-eb7e-c03b522b93c2"
-      },
-      "source": [
+        "scaler = MinMaxScaler(feature_range=(0, 1))\n",
         "#setting index as date\n",
         "df['Dates'] = pd.to_datetime(df.Dates,format='%Y-%m-%d')\n",
         "df.index = df['Dates']\n",
         "\n",
         "#plot\n",
         "plt.figure(figsize=(16,8))\n",
-        "plt.plot(df['Close'], label='Close Price history')"
+        "plt.plot(df['Close'], label='Close Price history')\n",
+        "\n",
+        "print('\\n Shape of the data:')\n",
+        "print(df.shape)"
       ],
-      "execution_count": 51,
+      "execution_count": 52,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f35130eacc0>]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 51
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Shape of the data:\n",
+            "(50, 7)\n"
+          ],
+          "name": "stdout"
         },
         {
           "output_type": "display_data",
@@ -382,16 +380,6 @@
             "tags": []
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ErcIQkZoINSJ",
-        "colab_type": "text"
-      },
-      "source": [
-        "The profit or loss calculation is usually determined by the closing price of a stock for the day, hence we will consider the closing price as the target variable. Let’s plot the target variable to understand how it’s shaping up in our data:"
       ]
     },
     {
