--- a/Event_tracker_1.ipynb
+++ b/Event_tracker_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Event_tracker_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOYeJJS1xnjX93yehcQ6CD9",
+      "authorship_tag": "ABX9TyOOgdC1yusP6om4a0zbC9qF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -379,6 +379,137 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0ok3cXQbSxB-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7d2f43df-8011-4a9c-e08a-11ac3d361d28"
+      },
+      "source": [
+        "print('There are {} number of days in the dataset.'.format(df.shape[0]))"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "There are 50 number of days in the dataset.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VGL-xkEvLrkc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "190d8f03-9386-4c54-92ff-9acf2a101332"
+      },
+      "source": [
+        "#creating dataframe with date and the target variable\n",
+        "data = df.sort_index(ascending=True, axis=0)\n",
+        "new_data = pd.DataFrame(index=range(0,len(df)),columns=['Dates', 'Close'])\n",
+        "\n",
+        "for i in range(0,len(data)):\n",
+        "     new_data['Dates'][i] = data['Dates'][i]\n",
+        "     new_data['Close'][i] = data['Close'][i]\n",
+        "     # splitting into train and validation\n",
+        "train = new_data[:35]\n",
+        "valid = new_data[35:]\n",
+        "\n",
+        "# shapes of training set\n",
+        "print('\\n Shape of training set:')\n",
+        "print(train.shape)\n",
+        "\n",
+        "# shapes of validation set\n",
+        "print('\\n Shape of validation set:')\n",
+        "print(valid.shape)\n"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Shape of training set:\n",
+            "(35, 2)\n",
+            "\n",
+            " Shape of validation set:\n",
+            "(15, 2)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ShhGctiUT_Xj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "f69245b9-d7aa-4ef2-ab6f-75b25f955fd0"
+      },
+      "source": [
+        "# NOTE: While splitting the data into train and validation set, we cannot use random splitting since that will destroy the time component. \n",
+        "# So here we have set the 3 months data into validation and the 9months data before that into train set.\n",
+        "\n",
+        "# splitting into train and validation\n",
+        "train = new_data[:35]\n",
+        "valid = new_data[35:]\n",
+        "\n",
+        "# shapes of training set\n",
+        "print('\\n Shape of training set:')\n",
+        "print(train.shape)\n",
+        "\n",
+        "# shapes of validation set\n",
+        "print('\\n Shape of validation set:')\n",
+        "print(valid.shape)\n",
+        "\n",
+        "# In the next step, we will create predictions for the validation set and check the RMSE using the actual values.\n",
+        "# making predictions\n",
+        "preds = []\n",
+        "for i in range(0,valid.shape[0]):\n",
+        "    a = train['Close'][len(train)-15+i:].sum() + sum(preds)\n",
+        "    b = a/15\n",
+        "    preds.append(b)\n",
+        "\n",
+        "# checking the results (RMSE value)\n",
+        "rms=np.sqrt(np.mean(np.power((np.array(valid['Close'])-preds),2)))\n",
+        "print('\\n RMSE value on validation set:')\n",
+        "print(rms)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " Shape of training set:\n",
+            "(35, 2)\n",
+            "\n",
+            " Shape of validation set:\n",
+            "(15, 2)\n",
+            "\n",
+            " RMSE value on validation set:\n",
+            "4.711262694573645\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
