--- a/Event_tracker_1.ipynb
+++ b/Event_tracker_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Event_tracker_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOOgdC1yusP6om4a0zbC9qF",
+      "authorship_tag": "ABX9TyPwuCpiBFtblGprtv7covE1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -436,7 +436,7 @@
         "\n",
         "# shapes of validation set\n",
         "print('\\n Shape of validation set:')\n",
-        "print(valid.shape)\n"
+        "print(valid.shape)"
       ],
       "execution_count": 54,
       "outputs": [
